--- a/myapp/index.html
+++ b/myapp/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="public/wearit-logo-2-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Agdasima:wght@700&family=Kanit&family=Poppins&family=Roboto&family=Rubik:wght@500&display=swap" rel="stylesheet">
     <title>WearIt</title>
   </head>
   <body class="overflow-x-hidden">
